trunk/Archive2/4f/3df8ecb432f623/output
main.cpp:1:1: error: 'vector' does not name a type
 vector<vector<signed long long>> getDistanceValues(vector<signed long long> differences)
 ^
